--- a/issue-net/package.json
+++ b/issue-net/package.json
@@ -13,7 +13,8 @@
     "@effect/platform-bun": "^0.79.0",
     "@effect/platform-node": "^0.96.1",
     "dfx": "^0.124.1",
-    "effect": "^3.17.10"
+    "effect": "^3.17.10",
+    "octokit": "^5.0.3"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.4",
